# NpmLensGnome

./: ROADMAP.md  io.github.eljijuna.MyNpmLens.json  meson.build
data/: io.github.eljijuna.MyNpmLens.desktop  io.github.eljijuna.MyNpmLens.metainfo.xml  meson.build
src/: main.c  meson.build  window.c  window.h
