install_data(
  'io.github.eljijuna.MyNpmLens.desktop',
  install_dir: get_option('datadir') / 'applications',
)

install_data(
  'io.github.eljijuna.MyNpmLens.metainfo.xml',
  install_dir: get_option('datadir') / 'metainfo',
)

install_data(
  'icons/io.github.eljijuna.MyNpmLens.svg',
  install_dir: get_option('datadir') / 'icons/hicolor/scalable/apps',
)
